finish the html

--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -29,7 +29,7 @@
     <section class="socialMediaCards">
       <div class="card fb">
         <div class="tag">
-          <img src="assets/images/icon-facebook.svg" alt="icon-facebook">
+          <span class="fb-icon"></span>
           <span>@nathanf</span>
         </div>
         <div class="followers">
@@ -43,7 +43,7 @@
       </div>
       <div class="card tt">
         <div class="tag">
-          <img src="assets/images/icon-twitter.svg" alt="icon-twitter">
+          <span class="tt-icon"></span>
           <span>@nathanf</span>
         </div>
         <div class="followers">
@@ -57,7 +57,7 @@
       </div>
       <div class="card insta">
         <div class="tag">
-          <img src="assets/images/icon-instagram.svg" alt="icon-instagram">
+          <span class="insta-icon"></span>
           <span>@realnathanf</span>
         </div>
         <div class="followers">
@@ -71,7 +71,7 @@
       </div>
       <div class="card yt">
         <div class="tag">
-          <img src="assets/images/icon-youtube.svg" alt="icon-youtube">
+          <span class="yt-icon"></span>
           <span>Nathan F.</span>
         </div>
         <div class="followers">
@@ -84,6 +84,95 @@
         </div>
       </div>
     </section>
+    <section class="overview">
+      <h1>Overview - Today</h1>
+
+      <div class="overviewsContainer">
+        <div class="box">
+          <div class="left-side">
+            <span>Page Views</span>
+            <span>87</span>
+          </div>
+          <div class="right-side">
+            <span class="fb-icon"></span>
+            <span class="icon profit">3%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Likes</span>
+            <span>52</span>
+          </div>
+          <div class="right-side">
+            <span class="fb-icon"></span>
+            <span class="icon loss">2%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Likes</span>
+            <span>5462</span>
+          </div>
+          <div class="right-side">
+            <span class="insta-icon"></span>
+            <span class="icon profit">2257%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Profile Views</span>
+            <span>52k</span>
+          </div>
+          <div class="right-side">
+            <span class="insta-icon"></span>
+            <span class="icon profit">1375%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Retweets</span>
+            <span>117</span>
+          </div>
+          <div class="right-side">
+            <span class="tt-icon"></span>
+            <span class="icon profit">303%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Likes</span>
+            <span>507</span>
+          </div>
+          <div class="right-side">
+            <span class="tt-icon"></span>
+            <span class="icon profit">553%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Likes</span>
+            <span>107</span>
+          </div>
+          <div class="right-side">
+            <span class="yt-icon"></span>
+            <span class="icon loss">19%</span>
+          </div>
+        </div>
+        <div class="box">
+          <div class="left-side">
+            <span>Total Views</span>
+            <span>1407</span>
+          </div>
+          <div class="right-side">
+            <span class="yt-icon"></span>
+            <span class="icon loss">12%</span>
+          </div>
+        </div>
+      </div>
+  Total Views
+  1407
+  12%
+    </section>
   </div>
 
   
@@ -93,39 +182,7 @@
 
 
 
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
