--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -169,24 +169,12 @@
           </div>
         </div>
       </div>
-  Total Views
-  1407
-  12%
     </section>
   </div>
-
-  
-  
-  
-  
-
-
-
-  
-  
-  <div class="attribution">
+ 
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
