finish the switch

--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -23,7 +23,10 @@
       </div>
       <div class="left-side">
         <span>Dark Mode</span>
-        <input type="checkbox" name="toggleMode" id="toggleMode">
+        <label class="switch">
+          <input type="checkbox" name="toggleMode" id="toggleMode">
+          <span class="slider"></span>
+        </label>
       </div>
     </header>
     <section class="socialMediaCards">
