finish the cards

--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -32,7 +32,7 @@
     <section class="socialMediaCards">
       <div class="card fb">
         <div class="tag">
-          <span class="fb-icon"></span>
+          <div class="fb-icon"></div>
           <span>@nathanf</span>
         </div>
         <div class="followers">
@@ -40,7 +40,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon"></span>
+          <span class="icon profit"></span>
           <span>12 Today</span>
         </div>
       </div>
@@ -54,7 +54,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon"></span>
+          <span class="icon profit"></span>
           <span>99 Today</span>
         </div>
       </div>
@@ -68,7 +68,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon"></span>
+          <span class="icon profit"></span>
           <span>1099 Today</span>
         </div>
       </div>
@@ -81,8 +81,8 @@
           <h1>8239</h1>
           <span>Subscribersx</span>
         </div>
-        <div class="today profit">
-          <span class="icon"></span>
+        <div class="today loss">
+          <span class="icon loss"></span>
           <span>144 Today</span>
         </div>
       </div>
