--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -40,8 +40,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon profit"></span>
-          <span>12 Today</span>
+          <span class="icon profit">12 Today</span>
         </div>
       </div>
       <div class="card tt">
@@ -54,8 +53,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon profit"></span>
-          <span>99 Today</span>
+          <span class="icon profit">99 Today</span>
         </div>
       </div>
       <div class="card insta">
@@ -68,8 +66,7 @@
           <span>Followers</span>
         </div>
         <div class="today profit">
-          <span class="icon profit"></span>
-          <span>1099 Today</span>
+          <span class="icon profit">1099 Today</span>
         </div>
       </div>
       <div class="card yt">
@@ -82,8 +79,7 @@
           <span>Subscribersx</span>
         </div>
         <div class="today loss">
-          <span class="icon loss"></span>
-          <span>144 Today</span>
+          <span class="icon loss">144 Today</span>
         </div>
       </div>
     </section>
