--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -169,11 +169,13 @@
         </div>
       </div>
     </section>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">@breno5g</a>.
+    </div>
   </div>
  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  
 </body>
 </html>
