Create the theme function

--- a/Project 16 - Social media dashboard with theme switcher/index.html
+++ b/Project 16 - Social media dashboard with theme switcher/index.html
@@ -24,7 +24,7 @@
       <div class="left-side">
         <span>Dark Mode</span>
         <label class="switch">
-          <input type="checkbox" name="toggleMode" id="toggleMode">
+          <input type="checkbox" id="toggle" onclick="changeTheme(this)">
           <span class="slider"></span>
         </label>
       </div>
@@ -176,6 +176,6 @@
     </div>
   </div>
  
-  
+  <script src="script.js"></script>
 </body>
 </html>
