--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -16,10 +16,17 @@
   </style>
 </head>
 <body>
+  <div class="bg"></div>
+  <section class="todoApp">
+    <header>
+      <h1>
+        Todo
+      </h1>
+      <button><img src="assets/images/icon-sun.svg" alt="Turn to light mode"></button>
+    </header>
+  </section>
 
-  Todo
-
-  <!-- Add dynamic number --> items left
+  <!-- Add dynamic number items left
 
   All
   Active 
@@ -32,6 +39,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/breno5g">Breno Santos</a>.
-  </div>
+  </div> -->
 </body>
 </html>
