--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -24,6 +24,14 @@
       </h1>
       <button><img src="assets/images/icon-sun.svg" alt="Turn to light mode"></button>
     </header>
+    <div class="createNew">
+      <div>
+        <button></button>
+      </div>
+      <div>
+        <input type="text" placeholder="Create a new todo...">
+      </div>
+    </div>
   </section>
 
   <!-- Add dynamic number items left
