--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -70,6 +70,15 @@
             <span>Brownie</span>
           </div>
         </div>
+        <div class="todo">
+          <div class="left-side">
+            <input type="checkbox" name="check">
+            <label for="check" onclick="check(this)"></label>
+          </div>
+          <div class="right-side">
+            <span>Brownie</span>
+          </div>
+        </div>
       </div>
       <div class="bottomBar">
 
@@ -92,20 +101,6 @@
     Coded by <a href="https://github.com/breno5g">Breno Santos</a>.
   </div> -->
 
-  <script>
-    function check(e) {
-      let checkbox = e.parentElement.children[0];
-      let text = e.parentElement.parentElement.children[1].children[0]
-      if (checkbox.checked == true) {
-        checkbox.checked = false;
-        text.style.textDecoration = "none";
-        text.style.color = "#cacde8";
-      } else {
-        checkbox.checked = true;
-        text.style.color = "#4d5066";
-        text.style.textDecoration = "line-through";
-      }
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
