finish the bottom bar

--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -70,31 +70,24 @@
             <span>Brownie</span>
           </div>
         </div>
-        <div class="todo">
-          <div class="left-side">
-            <input type="checkbox" name="check">
-            <label for="check" onclick="check(this)"></label>
-          </div>
-          <div class="right-side">
-            <span>Brownie</span>
-          </div>
-        </div>
       </div>
       <div class="bottomBar">
-
+        <div class="counter">
+          <span>0 items left</span>
+        </div>
+        <div class="filters">
+          <button>All</button>
+          <button>Active</button>
+          <button>Completed</button>
+        </div>
+        <div class="clear">
+          <button>Clear Completed</button>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Add dynamic number items left
-
-  All
-  Active 
-  Completed
-
-  Clear Completed
-
-  Drag and drop to reorder list
+  <!-- Drag and drop to reorder list
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
