--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="createNew">
       <div class="left-side">
-        <button></button>
+        <button onclick="createNewTodo(this)"></button>
       </div>
       <div class="right-side">
         <input type="text" placeholder="Create a new todo...">
