--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="container">
       <div class="todos">
-        <div class="todo">
+        <!-- <div class="todo">
           <div class="left-side">
             <input type="checkbox" name="check">
             <label for="check" onclick="check(this)"></label>
@@ -68,8 +68,7 @@
           </div>
           <div class="right-side">
             <span>Brownie</span>
-          </div>
-        </div>
+          </div> -->
       </div>
       <div class="bottomBar">
         <div class="counter">
@@ -84,6 +83,7 @@
           <button>Clear Completed</button>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
