Clear completed function

--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -80,7 +80,7 @@
           <button>Completed</button>
         </div>
         <div class="clear">
-          <button>Clear Completed</button>
+          <button onclick="clearCompleted()">Clear Completed</button>
         </div>
       </div>
     </div>
