Create the theme function

--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -22,7 +22,7 @@
       <h1>
         Todo
       </h1>
-      <button><img src="assets/images/icon-sun.svg" alt="Turn to light mode"></button>
+      <button theme="dark" onclick="changeTheme(this)"><img src="assets/images/icon-sun.svg" alt="Turn to light mode"></button>
     </header>
     <div class="createNew">
       <div class="left-side">
