create base of sort function & fix completed func

--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="filters">
           <button>All</button>
-          <button>Active</button>
+          <button onclick="sortActive(this)">Active</button>
           <button>Completed</button>
         </div>
         <div class="clear">
