sort & check functions update

--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -75,9 +75,9 @@
           <span>0 items left</span>
         </div>
         <div class="filters">
-          <button onclick="sortAll(this)">All</button>
-          <button onclick="sortActive(this)">Active</button>
-          <button onclick="sortCompleted(this)">Completed</button>
+          <button id="all" onclick="sortAll()">All</button>
+          <button id="active" onclick="sortActive()">Active</button>
+          <button id="completed" onclick="sortCompleted()">Completed</button>
         </div>
         <div class="clear">
           <button onclick="clearCompleted()">Clear Completed</button>
