--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="createNew">
       <div class="left-side">
-        <button onclick="createNewTodo(this)"></button>
+        <button onclick="createNewTodo(this)"><span>Create task button</span></button>
       </div>
       <div class="right-side">
         <input type="text" placeholder="Create a new todo...">
