--- a/Project 17 - Todo App/index.html
+++ b/Project 17 - Todo App/index.html
@@ -31,7 +31,7 @@
         <button onclick="createNewTodo(this)"><span>Create task button</span></button>
       </div>
       <div class="right-side">
-        <input type="text" placeholder="Create a new todo...">
+        <input id="createTaskInput"  type="text" placeholder="Create a new todo...">
       </div>
     </div>
     <div class="container">
