--- a/Project 18 - Launch countdown timer/index.html
+++ b/Project 18 - Launch countdown timer/index.html
@@ -37,9 +37,9 @@
       </div>
     </div>
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
