--- a/Project 18 - Launch countdown timer/index.html
+++ b/Project 18 - Launch countdown timer/index.html
@@ -20,19 +20,19 @@
     <h1>We're launching soon</h1>
     <div class="container">
       <div class="card days">
-        <div class="box"></div>
+        <div class="box">00</div>
         <span>Days</span>
       </div>
       <div class="card hours">
-        <div class="box"></div>
+        <div class="box">00</div>
         <span>Hours</span>
       </div>
       <div class="card minutes">
-        <div class="box"></div>
+        <div class="box">00</div>
         <span>Minutes</span>
       </div>
       <div class="card seconds">
-        <div class="box"></div>
+        <div class="box">00</div>
         <span>Seconds</span>
       </div>
     </div>
@@ -41,5 +41,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="script.js"></script>
 </body>
 </html>
