--- a/Project 18 - Launch countdown timer/index.html
+++ b/Project 18 - Launch countdown timer/index.html
@@ -37,6 +37,11 @@
       </div>
     </div>
   </div>
+  <div class="social">
+    <a href="#"><img src="assets/images/icon-facebook.svg" alt=""></a>
+    <a href="#"><img src="assets/images/icon-pinterest.svg" alt=""></a>
+    <a href="#"><img src="assets/images/icon-instagram.svg" alt=""></a>
+  </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
