Olha a bolinha no lugar de novo / função de tempo

--- a/Project 18 - Launch countdown timer/index.html
+++ b/Project 18 - Launch countdown timer/index.html
@@ -19,20 +19,20 @@
   <div class="countdown">
     <h1>We're launching soon</h1>
     <div class="container">
-      <div class="card days">
-        <div class="box">00</div>
+      <div class="card">
+        <div class="box day">00</div>
         <span>Days</span>
       </div>
-      <div class="card hours">
-        <div class="box">00</div>
+      <div class="card">
+        <div class="box hour">00</div>
         <span>Hours</span>
       </div>
-      <div class="card minutes">
-        <div class="box">00</div>
+      <div class="card">
+        <div class="box minute">00</div>
         <span>Minutes</span>
       </div>
-      <div class="card seconds">
-        <div class="box">00</div>
+      <div class="card">
+        <div class="box second">00</div>
         <span>Seconds</span>
       </div>
     </div>
