Olha quem voltou

--- a/Project 18 - Launch countdown timer/index.html
+++ b/Project 18 - Launch countdown timer/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="description" content="countdown timer">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
@@ -38,9 +39,9 @@
     </div>
   </div>
   <div class="social">
-    <a href="#"><img src="assets/images/icon-facebook.svg" alt=""></a>
-    <a href="#"><img src="assets/images/icon-pinterest.svg" alt=""></a>
-    <a href="#"><img src="assets/images/icon-instagram.svg" alt=""></a>
+    <a href="#"><img src="assets/images/icon-facebook.svg" alt="facebook button"></a>
+    <a href="#"><img src="assets/images/icon-pinterest.svg" alt="pinterest button"></a>
+    <a href="#"><img src="assets/images/icon-instagram.svg" alt="instagram button"></a>
   </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
