--- a/Project 19 - Rock Paper Scissor/index.html
+++ b/Project 19 - Rock Paper Scissor/index.html
@@ -22,18 +22,30 @@
   Play Again -->
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
-
+  <div class="gameContainer">
+    <header>
+      <div class="gameTitle">
+        <span>Rock</span>
+        <span>Paper</span>
+        <span>Scissors</span>
+      </div>
+      <div class="scoreBoard">
+        <span>score</span>
+        <span class="score">12</span>
+      </div>
+    </header>
+  </div>
 
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
