--- a/Project 19 - Rock Paper Scissor/index.html
+++ b/Project 19 - Rock Paper Scissor/index.html
@@ -40,6 +40,12 @@
         <span class="score">12</span>
       </div>
     </header>
+    <div class="gameTable">
+      <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      <span class="btn scissors"><img src="Assets/images/icon-scissors.svg" alt=""></span>
+      <span class="btn rock"><img src="Assets/images/icon-rock.svg" alt=""></span>
+    </div>
+    <button class="rules">Rules</button>
   </div>
 
   
