--- a/Project 19 - Rock Paper Scissor/index.html
+++ b/Project 19 - Rock Paper Scissor/index.html
@@ -40,10 +40,44 @@
         <span class="score">12</span>
       </div>
     </header>
-    <div class="gameTable">
-      <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
+    <!-- <div class="gameTable init">
+      <span class="btn paper" value><img src="Assets/images/icon-paper.svg" alt=""></span>
       <span class="btn scissors"><img src="Assets/images/icon-scissors.svg" alt=""></span>
       <span class="btn rock"><img src="Assets/images/icon-rock.svg" alt=""></span>
+    </div> -->
+    <!-- <div class="gameTable waitCOM">
+      <div>
+        <span>You picked</span>
+        <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      </div>
+      <div>
+        <span>The house picked</span>
+        <span class="btn COM"></span>
+      </div>
+    </div> -->
+    <!-- <div class="gameTable COMResponse">
+      <div>
+        <span>You picked</span>
+        <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      </div>
+      <div>
+        <span>The house picked</span>
+        <span class="btn rock"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      </div>
+    </div> -->
+    <div class="gameTable end">
+      <div class="box">
+        <span>You picked</span>
+        <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      </div>
+      <div class="endGame">
+        <span>You Lose</span>
+        <button>Play Again</button>
+      </div>
+      <div class="box">
+        <span>The house picked</span>
+        <span class="btn rock"><img src="Assets/images/icon-paper.svg" alt=""></span>
+      </div>
     </div>
     <button class="rules">Rules</button>
   </div>
