--- a/Project 19 - Rock Paper Scissor/index.html
+++ b/Project 19 - Rock Paper Scissor/index.html
@@ -40,11 +40,11 @@
         <span class="score">12</span>
       </div>
     </header>
-    <!-- <div class="gameTable init">
-      <span class="btn paper" value><img src="Assets/images/icon-paper.svg" alt=""></span>
-      <span class="btn scissors"><img src="Assets/images/icon-scissors.svg" alt=""></span>
-      <span class="btn rock"><img src="Assets/images/icon-rock.svg" alt=""></span>
-    </div> -->
+    <div class="gameTable init">
+      <span onclick="init(this)" value="0" class="btn paper" value><img src="Assets/images/icon-paper.svg" alt=""></span>
+      <span onclick="init(this)" value="1" class="btn scissors"><img src="Assets/images/icon-scissors.svg" alt=""></span>
+      <span onclick="init(this)" value="2" class="btn rock"><img src="Assets/images/icon-rock.svg" alt=""></span>
+    </div>
     <!-- <div class="gameTable waitCOM">
       <div>
         <span>You picked</span>
@@ -65,7 +65,7 @@
         <span class="btn rock"><img src="Assets/images/icon-paper.svg" alt=""></span>
       </div>
     </div> -->
-    <div class="gameTable end">
+    <!-- <div class="gameTable end">
       <div class="box">
         <span>You picked</span>
         <span class="btn paper"><img src="Assets/images/icon-paper.svg" alt=""></span>
@@ -78,7 +78,7 @@
         <span>The house picked</span>
         <span class="btn rock"><img src="Assets/images/icon-paper.svg" alt=""></span>
       </div>
-    </div>
+    </div> -->
     <button class="rules">Rules</button>
   </div>
 
@@ -87,5 +87,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="script.js"></script>
 </body>
 </html>
