--- a/Project 21 - Chat app CSS illustration/index.html
+++ b/Project 21 - Chat app CSS illustration/index.html
@@ -10,13 +10,62 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  
+  <div class="iphone">
+    <div class="screen">
+      <header>
+          <div class="perfil">
+            <button><i class="fas fa-chevron-left"></i></button>
+          <img src="assets/images/avatar.jpg" alt="Samuel avatar">
+          <div class="headerName">
+            <span>Samuel Green</span>
+            <span>Available to walk</span>
+          </div>
+          <button><i class="fas fa-ellipsis-v"></i></button>
+          </div>
+        </header>
+        <div class="chat">
+          <div class="samuelMessages">
+            <span>That sounds great. I’d be happy with that.</span>
+            <span>Could you send over some pictures of your dog, please?</span>
+          </div>
+          <div class="myMessages">
+            <div class="images">
+              <img src="assets/images/dog-image-1.jpg" alt="">
+              <img src="assets/images/dog-image-2.jpg" alt="">
+              <img src="assets/images/dog-image-3.jpg" alt="">
+            </div>
+            <span>Here are a few pictures. She’s a happy girl!</span>
+            <span>Can you make it?</span>
+          </div>
+          <div class="samuelMessages">
+            <span>She looks so happy! The time we discussed works. How long shall I take her out for?</span>
+            <div class="prices">
+              <div class="priceOptions">
+                <input type="radio" name="option" id="">
+                <span>30 minute walk</span>
+                <span>$29</span>
+              </div>
+              <div class="priceOptions">
+                <input type="radio" name="option" id="">
+                <span>1 hour walk</span>
+                <span>$49</span>
+              </div>
+            </div>
+          </div>
+          <div class="sendMessage">
+            <input type="text" placeholder="Type a message...">
+            <button><i class="fas fa-chevron-right"></i></button>
+          </div>
+        </div>
+    </div>
+  </div>
   <!-- Samuel Green
   Available to Walk
 
