--- a/Project 21 - Chat app CSS illustration/index.html
+++ b/Project 21 - Chat app CSS illustration/index.html
@@ -66,6 +66,14 @@
         </div>
     </div>
   </div>
+  <div class="text">
+    <h1>Simple booking</h1>
+    <p>
+      Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+      discuss arrangements and make bookings. Once the walk has been completed you can rate 
+      your walker and book again all through the chat.
+    </p>
+  </div>
   <!-- Samuel Green
   Available to Walk
 
