--- a/Project 24 - Edie homepage/index.html
+++ b/Project 24 - Edie homepage/index.html
@@ -14,5 +14,174 @@
         <link rel="stylesheet" href="style.css" />
         <title>Edie homepage</title>
     </head>
-    <body></body>
+    <body>
+        <div class="siteContainer">
+            <header class="menuBar">
+                <span class="logo">Edie</span>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our Works</a></li>
+                        <li><a href="#">Clients</a></li>
+                        <li><a href="#">Contacts</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section class="introduction">
+                    <div class="firstBox">
+                        <span>Unhappy with your website?</span>
+                        <h1>We create beautiful and fast web services</h1>
+                    </div>
+                    <figure>
+                        <img src="assets/heroImage.jpg" alt="" />
+                    </figure>
+                    <div class="lastBox">
+                        <h1>Story, emotion and purpose</h1>
+                        <p>
+                            We help transform your ideas into real world
+                            applications that will outperform your toughest
+                            competition and help you achieve your strategic
+                            goals in short period of time.
+                        </p>
+                        <div class="contact">
+                            <span>Want us to contact you?</span>
+                            <div class="box">
+                                <input
+                                    type="email"
+                                    name=""
+                                    id=""
+                                    placeholder="Email"
+                                />
+                                <button>Join</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="about">
+                    <section class="services">
+                        <h1>We offer high demand services</h1>
+                        <div class="cards">
+                            <div class="card">
+                                <span><i class="fas fa-pen"></i></span>
+                                <h2>UI/UX Design</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Duis a metus ac nulla
+                                    consequat aliquet id quis turpis.
+                                </p>
+                                <button>Get started</button>
+                            </div>
+                            <div class="card">
+                                <span><i class="fas fa-code"></i></span>
+                                <h2>Front End</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Duis a metus ac nulla
+                                    consequat aliquet id quis turpis.
+                                </p>
+                                <button>Get started</button>
+                            </div>
+                            <div class="card">
+                                <span><i class="fas fa-th-list"></i></span>
+                                <h2>Back end</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Duis a metus ac nulla
+                                    consequat aliquet id quis turpis.
+                                </p>
+                                <button>Get started</button>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="projects">
+                        <h1>Good design means good business</h1>
+                        <div class="cards">
+                            <div class="card">
+                                <img src="assets/smarthome.jpg" alt="" />
+                                <span>Full stack application</span>
+                                <h2>Smart home dashboard</h2>
+                            </div>
+                            <div class="card">
+                                <img src="assets/onboard.png" alt="" />
+                                <span>UX/UI design</span>
+                                <h2>Onboard application</h2>
+                            </div>
+                            <div class="card">
+                                <img src="assets/booking.png" alt="" />
+                                <span>Mobile application</span>
+                                <h2>Booking system</h2>
+                            </div>
+                            <div class="card">
+                                <img src="assets/juice-product.png" alt="" />
+                                <span>Front End applicati on</span>
+                                <h2>Juice product homepage</h2>
+                            </div>
+                        </div>
+                        <button>see more <i>→</i></button>
+                    </section>
+                    <section class="team">
+                        <div class="texts">
+                            <span>Meet the team</span>
+                            <h1>We are chilled and a laidback team</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit.
+                            </p>
+                        </div>
+                        <aside class="furiousGrid">
+                            <img src="assets/person1.png" alt="" />
+                            <img src="assets/person2.png" alt="" />
+                            <img src="assets/person3.png" alt="" />
+                        </aside>
+                    </section>
+                    <section class="testimonial">
+                        <p>
+                            “Fast and outstanding resutls. Edie understands
+                            their customer’s needs. They have a young and
+                            talented team.”
+                        </p>
+                        <div class="box">
+                            <img src="assets/person4.png" alt="" />
+                            <div class="texts">
+                                <span>Carlos Tran</span>
+                                <span>The Decorate Gatsby</span>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+            </main>
+            <footer>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our Works</a></li>
+                        <li><a href="#">Clients</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </nav>
+                <div class="social">
+                    <h1>Edie</h1>
+                    <div class="box">
+                        <button>
+                            <img src="assets/instagram.svg" alt="" />
+                        </button>
+                        <button>
+                            <img src="assets/linkedin.svg" alt="" />
+                        </button>
+                        <button><img src="assets/twitter.svg" alt="" /></button>
+                    </div>
+                </div>
+                <div class="contact">
+                    <span>Want us to contact you?</span>
+                    <div class="box">
+                        <input type="email" name="" id="" placeholder="Email" />
+                        <button>Join</button>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </body>
 </html>
