finish the header

--- a/Project 25 - Portfolio/index.html
+++ b/Project 25 - Portfolio/index.html
@@ -4,8 +4,54 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Portfolio</title>
     </head>
-    <body></body>
+    <body>
+        <div class="portfolioContainer">
+            <header class="header">
+                <figure>
+                    <img
+                        src="https://avatars.githubusercontent.com/u/51424478?v=4"
+                        alt="Avatar"
+                    />
+                </figure>
+                <div class="informations">
+                    <header>
+                        <div>
+                            <h1>Breno Santos</h1>
+                            <span>Front-end Developer</span>
+                        </div>
+                        <aside>
+                            <span
+                                ><i class="fas fa-envelope"></i>
+                                fakemail@gmail.com</span
+                            >
+                            <span
+                                ><i class="fas fa-phone-alt"></i> (+655) 38
+                                9893829382</span
+                            >
+                        </aside>
+                    </header>
+                    <div class="textContainer">
+                        <p>
+                            Self-motivated developer, who is willing to learn
+                            and create outstanding UI applications.
+                        </p>
+                        <p>
+                            Donec aliquam est dui, vel vestibulum diam
+                            sollicitudin id. Quisque feugiat malesuada molestie.
+                        </p>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </body>
 </html>
